--- a/angular.json
+++ b/angular.json
@@ -127,19 +127,19 @@
         }
       }
     },
-    "api": {
-      "root": "apps/api",
-      "sourceRoot": "apps/api/src",
+    "microservice": {
+      "root": "apps/microservice",
+      "sourceRoot": "apps/microservice/src",
       "projectType": "application",
-      "prefix": "api",
+      "prefix": "microservice",
       "schematics": {},
       "architect": {
         "build": {
           "builder": "@nrwl/builders:node-build",
           "options": {
-            "outputPath": "dist/apps/api",
-            "main": "apps/api/src/main.ts",
-            "tsConfig": "apps/api/tsconfig.app.json"
+            "outputPath": "dist/apps/microservice",
+            "main": "apps/microservice/src/main.ts",
+            "tsConfig": "apps/microservice/tsconfig.app.json"
           },
           "configurations": {
             "production": {
@@ -147,8 +147,8 @@
               "extractLicenses": true,
               "fileReplacements": [
                 {
-                  "replace": "apps/api/src/environments/environment.ts",
-                  "with": "apps/api/src/environments/environment.prod.ts"
+                  "replace": "apps/microservice/src/environments/environment.ts",
+                  "with": "apps/microservice/src/environments/environment.prod.ts"
                 }
               ]
             }
@@ -157,15 +157,15 @@
         "serve": {
           "builder": "@nrwl/builders:node-execute",
           "options": {
-            "buildTarget": "api:build"
+            "buildTarget": "microservice:build"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "apps/api/tsconfig.app.json",
-              "apps/api/tsconfig.spec.json"
+              "apps/microservice/tsconfig.app.json",
+              "apps/microservice/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -175,8 +175,8 @@
         "test": {
           "builder": "@nrwl/builders:jest",
           "options": {
-            "jestConfig": "apps/api/jest.config.js",
-            "tsConfig": "apps/api/tsconfig.spec.json"
+            "jestConfig": "apps/microservice/jest.config.js",
+            "tsConfig": "apps/microservice/tsconfig.spec.json"
           }
         }
       }
