--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "marleyjs",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "scripts": {
+    "api:start": "ts-node -r tsconfig-paths/register apps/api/src/main.ts",
+    "api:start:dev": "nodemon",
+    "api:prestart:prod": "rm -rf dist && tsc",
+    "api:start:prod": "node dist/apps/api/main.js",
+    "api:start:hmr": "node dist/apps/api/server",
+    "api:test:cov": "jest --coverage",
+    "api:test:e2e": "jest --config ./apps/api/test/jest-e2e.json",
+    "api:webpack": "webpack --config apps/api/webpack.config.js",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -23,6 +31,7 @@
     "nx:help": "./node_modules/.bin/nx help",
     "update": "ng update @nrwl/schematics",
     "update:check": "ng update",
+    "update:skip": "./node_modules/.bin/nx update:skip",
     "stylelint": "stylelint \"apps/**/*.scss\" && stylelint \"libs/**/*.scss\"",
     "lint:ci": "npm run stylelint && npm run lint",
     "prettier": "prettier --config '. prettierrc.json' --write 'apps/*.ts' --write 'apps/**/*.ts'",
@@ -31,6 +40,7 @@
     "serve": "ng serve",
     "serve:proxy": "ng serve --proxy-config proxy.conf.json",
     "version": "node version.js",
+    "postinstall": "./node_modules/.bin/nx postinstall",
     "precommit": "lint-staged"
   },
   "private": true,
@@ -52,6 +62,12 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@nestjs/common": "^5.4.0",
+    "@nestjs/core": "^5.4.0",
+    "@nestjs/microservices": "^5.4.0",
+    "@nestjs/schematics": "^5.9.7",
+    "@nestjs/testing": "^5.4.0",
+    "@nestjs/websockets": "^5.4.0",
     "@ngrx/effects": "6.1.0",
     "@ngrx/router-store": "6.1.0",
     "@ngrx/store": "6.1.0",
@@ -59,9 +75,11 @@
     "bulma": "^0.7.2",
     "core-js": "^2.5.4",
     "express": "4.16.3",
+    "fastify-formbody": "^2.0.1",
     "git-describe": "^4.0.3",
     "normalize.css": "^8.0.1",
     "rxjs": "^6.0.0",
+    "tsconfig-paths": "^3.7.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -95,12 +113,14 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "lint-staged": "^8.0.4",
     "ngrx-store-freeze": "0.2.4",
+    "nodemon": "^1.18.6",
     "prettier": "1.13.7",
     "protractor": "~5.4.0",
     "stylelint": "^9.8.0",
     "stylelint-config-css-modules": "^1.3.0",
     "testcafe": "^0.23.2",
     "testcafe-live": "^0.1.4",
+    "ts-loader": "^5.3.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
