--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marleyjs",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "scripts": {
     "api:start": "ts-node -r tsconfig-paths/register apps/api/src/main.ts",
     "api:start:dev": "nodemon",
@@ -35,10 +35,9 @@
     "lint:ci": "npm run stylelint && npm run lint",
     "prettier": "prettier --config '. prettierrc.json' --write 'apps/*.ts' --write 'apps/**/*.ts'",
     "build:dev": "ng build",
-    "build:prod": "npm run prettier && ng build --prod && npm run version",
+    "build:prod": "npm run prettier && ng build --prod",
     "serve": "ng serve",
     "serve:proxy": "ng serve --proxy-config proxy.conf.json",
-    "version": "node version.js",
     "postinstall": "./node_modules/.bin/nx postinstall",
     "precommit": "lint-staged"
   },
