--- a/nx.json
+++ b/nx.json
@@ -34,6 +34,12 @@
     },
     "admin-e2e": {
       "tags": []
+    },
+    "dashboard": {
+      "tags": []
+    },
+    "dashboard-e2e": {
+      "tags": []
     }
   }
 }
