--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "update": "ng update @nrwl/schematics",
     "update:check": "ng update",
     "update:skip": "./node_modules/.bin/nx update:skip",
-    "stylelint": "stylelint \"apps/**/*.scss\" && stylelint \"libs/**/*.scss\"",
+    "stylelint": "stylelint \"apps/**/*.scss\" --config ./.stylelintrc.yml && stylelint \"libs/**/*.scss\" --config ./.stylelintrc.yml",
     "htmlhint": "htmlhint \"apps/**/*.html\"",
     "lint:ci": "npm run stylelint && npm run htmlhint && npm run lint",
     "prettier": "prettier --config '. prettierrc.json' --write 'apps/*.ts' --write 'apps/**/*.ts'",
@@ -118,6 +118,9 @@
     "protractor": "~5.4.0",
     "stylelint": "^9.8.0",
     "stylelint-config-css-modules": "^1.3.0",
+    "stylelint-config-sass-guidelines": "^5.3.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-scss": "^3.4.1",
     "testcafe": "^0.23.2",
     "testcafe-live": "^0.1.4",
     "ts-loader": "^5.3.0",
